# qttest01

./: CMakeLists.txt  d3d11squircle.cpp  main.cpp  main.qml  qml.qrc
lib/: berizr.h  berizr.js
